# para-genesis-1

./: Cargo.toml  README.md  \
src/: camera.rs  game.rs  life.rs  main.rs  mathtools.rs  menu.rs  physics.rs  player.rs  rockybody.rs  ships.rs  star.rs  star_system.rs  texturetools.rs
