[package]
name = "para-genesis-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
image = "0.24.9"
macroquad = { git = "https://github.com/not-fl3/macroquad", features = ["audio"]}
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.9.0"
